--- a/templates/login.html
+++ b/templates/login.html
@@ -297,9 +297,8 @@
             </div>
             <form action="/login" method="POST">
                 <div class="form-group">
-                    <label for="email">Email Address</label>
-                    <input type="email" class="form-control" id="email" name="email" placeholder="Enter your email"
-                        required>
+                    <label for="email">Email Address or Username</label>
+                    <input type="text" name="identifier" class="form-control" placeholder="Username or Email" required>
                 </div>
                 <div class="form-group">
                     <label for="password">Password</label>
